# matrixbot-ack

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.sample.yaml  renovate.json  sample.config.yaml
.circleci/: config.yml
charts/matrixbot/: Chart.yaml  values.yaml
charts/matrixbot-ack/: Chart.yaml  values.yaml
charts/matrixbot-ack/templates/: deployment.yaml  pvc-db.yaml  pvc.yaml
charts/matrixbot/templates/: deployment.yaml
charts/matrixbot_finance/: Chart.yaml  values.yaml
charts/matrixbot_finance/templates/: deployment.yaml  pvc-db.yaml  service.yaml
helmfile.d/: 00-matrixbot-finance.yaml  00-mongodb.yaml  01-mongoexpress.yaml  05-matrixbot-ack.yaml  05-matrixbot-escalation.yaml  06-matrixbot-alert.yaml
helmfile.d/config/: matrixbot-ack.yaml.gotmpl  matrixbot-alert.yaml.gotmpl  matrixbot-escalation.yaml.gotmpl  matrixbot_finance.yaml.gotmpl  mongo-express.yaml.gotmpl  mongodb.yaml.gotmpl
scripts/: integration-tests.sh
src/: database.rs  escalation.rs  lib.rs  main.rs  matrix.rs  primitives.rs  processor.rs  user_request.rs  webhook.rs
src/adapter/: email.rs  matrix.rs  mod.rs  pagerduty.rs
src/tests/: escalation.rs  mod.rs  user_request.rs
