[package]
name = "matrixbot"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "system"
path = "src/lib.rs"

[[bin]]
name = "matrixbot"
path = "src/main.rs"

[dependencies]
tracing = "0.1.35" 
anyhow = "1.0.43"
serde = "1.0.129"
serde_json = "1.0.66"
serde_yaml = "0.8.20"
matrix-sdk = "0.3.0"
ruma = "0.2.0"
actix-web = "4.0.1"
url = "2.2.2"
async-trait = "0.1.51"
futures = "0.3.17"
structopt = "0.3.23"
md5 = "0.7.0"
mongodb = { version = "2.0.0-beta", features = ["bson-u2i"] }
bson = "2.0.0-beta"
tokio = "1.14.0"
reqwest = "0.11.10"
google-gmail1 = "3.1.0+20220228"
base64 = "0.13.0"

[dev-dependencies]
rand = "0.8.5"
# Temporarily required until `actix::test` gets fixed.
actix-rt = "2.7.0"
