[package]
name = "matrixbot"
version = "0.1.6"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "system"
path = "src/lib.rs"

[[bin]]
name = "matrixbot"
path = "src/main.rs"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
anyhow = "1.0.68"
serde = "1.0.152"
serde_json = "1.0.91"
serde_yaml = "0.9.17"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "12cbff2"}
actix = "0.13.0"
actix-web = "4.3.0"
url = "2.3.1"
async-trait = "0.1.64"
futures = "0.3.26"
structopt = "0.3.26"
md5 = "0.7.0"
mongodb = "2.3.1"
bson = "2.5.0"
tokio = "1.25.0"
