[package]
name = "matrixbot"
version = "0.1.6"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "system"
path = "src/lib.rs"

[[bin]]
name = "matrixbot"
path = "src/main.rs"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
tokio = "1.26.0"
anyhow = "1.0.43"
serde = "1.0.158"
serde_json = "1.0.94"
serde_yaml = "0.9.19"
matrix-sdk = "0.3.0"
ruma = "0.2.0"
actix = "0.12.0"
actix-web = "4.0.0-beta.9"
url = "2.2.2"
async-trait = "0.1.67"
futures = "0.3.27"
structopt = "0.3.26"
md5 = "0.7.0"
mongodb =  "2.4.0"
bson = "2.6.1"
